--- a/indexd.html
+++ b/indexd.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="Style.css/Manu.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h3 class="titke">Ma<span class="orang">r</span>y</h3>
+            <ul>
+            <li class="a">Portfolio</li>
+            <li class="a">Blog</li>
+            <li><button class="btn-primari" >Hire Me</button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
